--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "shelljs": "^0.8.4"
+    "@aws-sdk/client-sqs": "^3.43.0",
+    "shelljs": "^0.8.4",
+    "ts-node": "^10.4.0"
   }
 }
